build: finish the r-util -> r-efi move
Fix all links and adjust the documentation to point to the new home.

Signed-off-by: David Rheinsberg <david.rheinsberg@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ categories = [
 ]
 description = "UEFI String Types and Converters"
 edition = "2018"
-homepage = "https://r-util.github.com/r-efi"
+homepage = "https://github.com/r-efi/r-efi/wiki"
 keywords = [
         "efi",
         "firmware",
